# CrowdWire

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.circleci/: config.yml
.github/workflows/: docker-pipeline.yml  main.yml  python-lint.yml  testing.yml
api/: .flake8  Dockerfile  README.md  alembic.ini  build-docker.sh  dump.rdb  entrypoint.sh  pyproject.toml  requirements.txt
api/alembic/: env.py
api/app/: main.py  utils.py
api/static/: default_map.json
backend/: pyproject.toml
backend/app/: main.py  test.html  utils.py
backend/app/api/: dependencies.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: login.py  users.py  world_movement.py
backend/app/core/: config.py  logging.py  security.py
backend/app/crud/: base.py  crud_users.py
backend/app/db/: base.py  base_class.py  init_db.py  session.py
backend/app/models/: __init__.py  friend.py  friend_request.py  role.py  user.py  user_settings.py  world.py  world_settings.py  world_tag.py  world_user.py
backend/app/schemas/: __init__.py  token.py  users.py
frontend/: Dockerfile  env.sh  package-lock.json  package.json  tsconfig.json
frontend/nginx/: nginx.conf
frontend/public/: env-config.js  index.html  manifest.json
frontend/src/: App.js  AppContext.js  index.js  routes.js
game_server/: index.js  package-lock.json  package.json
game_server/src/: server.js
k8s/: README.md
k8s/certmanager/: cert-issuer-nginx-ingress.yaml  certificate.yaml  (+1 more)
media_server/: .env.example  Dockerfile  README.md  entrypoint.sh  package-lock.json  package.json
(+464 files in other folders)
