[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.63.0"
async-exit-stack = "1.0.1"
async_generator = "1.10"
Authlib = "0.15.3"
certifi = "2020.12.5"
cffi = "1.14.5"
click = "7.1.2"
cryptography = "3.4.6"
ecdsa = "0.14.1"
h11 = "0.12.0"
httpcore = "0.12.3"
httptools = "0.1.1"
httpx = "0.17.0"
idna = "3.1"
itsdangerous = "1.1.0"
passlib = "1.7.4"
psycopg2-binary = "2.8.6"
pyasn1 = "0.4.8"
pycparser = "2.20"
pydantic = {extras = ["email"], version = "^1.8.1"}
python-dotenv = "0.15.0"
python-jose = "3.2.0"
python-multipart = "0.0.5"
PyYAML = "5.4.1"
rfc3986 = "1.4.0"
rsa = "4.7.2"
six = "1.15.0"
sniffio = "1.2.0"
SQLAlchemy = "1.3.23"
starlette = "0.13.6"
uvicorn = "0.13.4"
uvloop = "0.15.2"
watchgod = "0.7"
websockets = "8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
